--- a/docs/guide/MyBatis/分页插件.md
+++ b/docs/guide/MyBatis/分页插件.md
@@ -1,6 +1,6 @@
 2.1 分页插件介绍
 
-![](https://tcs-devops.aliyuncs.com/storage/112v0b60fafb694b30096bfa44d351d1b566?Signature=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJBcHBJRCI6IjVlNzQ4MmQ2MjE1MjJiZDVjN2Y5YjMzNSIsIl9hcHBJZCI6IjVlNzQ4MmQ2MjE1MjJiZDVjN2Y5YjMzNSIsIl9vcmdhbml6YXRpb25JZCI6IiIsImV4cCI6MTY5MDE4MTQ5OCwiaWF0IjoxNjg5NTc2Njk4LCJyZXNvdXJjZSI6Ii9zdG9yYWdlLzExMnYwYjYwZmFmYjY5NGIzMDA5NmJmYTQ0ZDM1MWQxYjU2NiJ9.IdtdIr0Ga2_V0VYL5cGeIHuJ6MEaZLJ6gRUTlECZzO8&download=%E5%9B%BE%E7%89%87.png "")
+![](https://tcs-devops.aliyuncs.com/storage/112v0b60fafb694b30096bfa44d351d1b566?Signature=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJBcHBJRCI6IjVlNzQ4MmQ2MjE1MjJiZDVjN2Y5YjMzNSIsIl9hcHBJZCI6IjVlNzQ4MmQ2MjE1MjJiZDVjN2Y5YjMzNSIsIl9vcmdhbml6YXRpb25JZCI6IiIsImV4cCI6MTY5MDI0NTE2NywiaWF0IjoxNjg5NjQwMzY3LCJyZXNvdXJjZSI6Ii9zdG9yYWdlLzExMnYwYjYwZmFmYjY5NGIzMDA5NmJmYTQ0ZDM1MWQxYjU2NiJ9.pL7MT6G_gWJ4a5BrSjwQWE7wxnfDnvZrVx1-20MhhVE&download=%E5%9B%BE%E7%89%87.png "")
 
 - 分页可以将很多条结果进行分页显示。 
 
@@ -10,7 +10,7 @@
 
 - MyBatis分页插件总结
 
-    - 在企业级开发中，分页也是一种常见的技术。而目前使用的 MyBatis 是不带分页功能的，如果想实现分页的 功能，需要我们手动编写 LIMIT 语句。但是不同的数据库实现分页的 SQL 语句也是不同的，所以手写分页 成本较高。这个时候就可以借助分页插件来帮助我们实现分页功能。 
+    - 在企业级开发中，分页也是一种常见的技术。而目前使用的 MyBatis 是不带分页功能的，如果想实现分页的 功能，需要我们手动编写 LIMIT 语句。但是不同的数据库实现 分页的 SQL 语句也是不同的，所以手写分页 成本较高。这个时候就可以借助分页插件来帮助我们实现分页功能。 
 
     - PageHelper：第三方分页助手。将复杂的分页操作进行封装，从而让分页功能变得非常简单。    
 
@@ -22,14 +22,14 @@ MyBatis可以使用第三方的插件来对功能进行扩展，分页助手Page
 
 ①导入与PageHelper的jar包
 
-```text
+```xml
 <!-- com.github.pagehelper/pagehelper -->
 <dependency>
     <groupId>com.github.pagehelper</groupId>
     <artifactId>pagehelper</artifactId>
     <version>5.2.1</version>
 </dependency>
-<!-- springboot 项目添加如下依赖starter  -->
+<!-- springboot 项目添加如下依赖starter spring springmvc -->
 <dependency>
     <groupId>com.github.pagehelper</groupId>
     <artifactId>pagehelper-spring-boot-starter</artifactId>
@@ -39,17 +39,17 @@ MyBatis可以使用第三方的插件来对功能进行扩展，分页助手Page
 
 ②在mybatis核心配置文件中配置PageHelper插件
 
-```text
+```xml
 <!-- 注意：分页助手的插件  配置在通用mapper之前 -->
  <!--集成分页助手插件-->
-    <plugins>
-        <plugin interceptor="com.github.pagehelper.PageInterceptor"></plugin>
-    </plugins>
+<plugins>
+    <plugin interceptor="com.github.pagehelper.PageInterceptor"/>
+</plugins>
 ```
 
 ③测试分页数据获取
 
-```text
+```java
  @Test
         public void pageTest(){
 ​
@@ -73,72 +73,70 @@ MyBatis可以使用第三方的插件来对功能进行扩展，分页助手Page
 
 **获得分页相关的其他参数**：
 
-```text
+```java
 //其他分页的数据
-            PageInfo<User> info=new PageInfo<>(all);
-​
-            System.out.println("总条数：" + info.getTotal());
-            System.out.println("总页数："+info.getPages());
-            int pageNum = info.getPageNum();//当前页
-            System.out.println("当前页："+pageNum);
-            int pageSize = info.getPageSize();//每页显示的条数
-            System.out.println("每页显示条数："+pageSize);
-            int prePage = info.getPrePage();//上一页
-            System.out.println("上一页：" +prePage);
-            int nextPage = info.getNextPage();//下一页
-            System.out.println("下一页：" +nextPage);
-            boolean isFirstPage = info.isIsFirstPage();//是否是第一页
-            System.out.println("是否是第一页：" +isFirstPage);
-            boolean isLastPage = info.isIsLastPage();//是否是最后一页
-            System.out.println("是否是最后一页:"+isLastPage);
-            MybatisUtils.closeSqlSession(sqlSession);
-​
+PageInfo<User> info=new PageInfo<>(all);
+
+System.out.println("总条数：" + info.getTotal());
+System.out.println("总页数："+info.getPages());
+int pageNum = info.getPageNum();//当前页
+System.out.println("当前页："+pageNum);
+int pageSize = info.getPageSize();//每页显示的条数
+System.out.println("每页显示条数："+pageSize);
+int prePage = info.getPrePage();//上一页
+System.out.println("上一页：" +prePage);
+int nextPage = info.getNextPage();//下一页
+System.out.println("下一页：" +nextPage);
+boolean isFirstPage = info.isIsFirstPage();//是否是第一页
+System.out.println("是否是第一页：" +isFirstPage);
+boolean isLastPage = info.isIsLastPage();//是否是最后一页
+System.out.println("是否是最后一页:"+isLastPage);
+MybatisUtils.closeSqlSession(sqlSession);
 ```
 
-2.4  分页插件知识小结
+### 2.4  分页插件知识小结
 
-分页：可以将很多条结果进行分页显示。 
+    分页：可以将很多条结果进行分页显示。 
 
-分页插件 jar 包：
+- 分页插件 jar 包：
 
-```
-<dependency>  
-	<groupId>com.github.pagehelper</groupId>  
-	artifactId>pagehelper</artifactId>  
-	<version>5.2.0</version>
+```text
+<dependency>
+    <groupId>com.github.pagehelper</groupId>
+    <artifactId>pagehelper</artifactId>
+    <version>5.3.2</version>
 </dependency>
 ```
 
-`<plugins>`：集成插件标签。 
+- `<plugins>`：集成插件标签。
 
-```
-<!--集成分页助手插件-->
-<plugins>    
-	<plugin interceptor="com.github.pagehelper.PageInterceptor"></plugin>
+```xml
+<plugins>
+	    <plugin interceptor="com.github.pagehelper.PageInterceptor"/>
 </plugins>
 ```
 
-分页助手相关 API     1.PageHelper：分页助手功能类。
+- 分页助手相关 API     1.PageHelper：分页助手功能类。
 
-- startPage()：设置分页参数 
+    - startPage()：设置分页参数 
 
-- PageInfo：分页相关参数功能类。 
+    - PageInfo：分页相关参数功能类。 
 
-- getTotal()：获取总条数 
+    - getTotal()：获取总条数 
 
-- getPages()：获取总页数
+    - getPages()：获取总页数
 
-- getPageNum()：获取当前页
+    - getPageNum()：获取当前页
 
-- getPageSize()：获取每页显示条数
+    - getPageSize()：获取每页显示条数
 
-- getPrePage()：获取上一页 
+    - getPrePage()：获取上一页 
 
-- getNextPage()：获取下一页 
+    - getNextPage()：获取下一页 
 
-- isIsFirstPage()：获取是否是第一页 
+    - isIsFirstPage()：获取是否是第一页 
 
-- isIsLastPage()：获取是否是最后一页    
+    - isIsLastPage()：获取是否是最后一页    
 
 
 
